# libcoro

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  libcoro.pc.in  library.properties
.githooks/: pre-commit  readme-template.md
.github/workflows/: ci-android.yml  ci-conan.yml  ci-coverage.yml  ci-cpu-usage.yml  ci-emscripten.yml  ci-fedora.yml  ci-macos.yml  ci-opensuse.yml  ci-ubuntu.yml  ci-windows.yml  ci.yml
cmake/: CPM.cmake
crosscompile/: Dockerfile
examples/: CMakeLists.txt  coro_condition_variable.cpp  coro_event.cpp  coro_generator.cpp  coro_http_200_ok_server.cpp  coro_invoke.cpp  coro_io_scheduler.cpp  coro_latch.cpp  coro_mutex.cpp  coro_queue.cpp  coro_ring_buffer.cpp  coro_scheduler.cpp  coro_semaphore.cpp  coro_shared_mutex.cpp  coro_sync_wait.cpp  coro_task.cpp  coro_task_container.cpp  coro_tcp_echo_server.cpp  coro_thread_pool.cpp  coro_when_all.cpp  coro_when_any.cpp
inc/coro/: awaitable.hpp  connect.hpp  coro.hpp  dns_client.hpp  event.hpp  generator.hpp  io_scheduler.hpp  latch.hpp  mutex.hpp  poll.hpp  promise.hpp  ring_buffer.hpp  scheduler.hpp  semaphore.hpp  shared_mutex.hpp  shutdown.hpp  socket.hpp  stop_signal.hpp  sync_wait.hpp  task.hpp  task_completion_source.hpp  task_container.hpp  tcp_client.hpp  tcp_scheduler.hpp  thread_pool.hpp  when_all.hpp
inc/coro/concepts/: awaitable.hpp  buffer.hpp  executor.hpp  promise.hpp
inc/coro/detail/: poll_info.hpp  void_value.hpp
inc/coro/net/: connect.hpp  dns_client.hpp  dns_resolver.hpp  hostname.hpp  ip_address.hpp  recv_status.hpp  send_status.hpp  socket.hpp  ssl_context.hpp  tcp_client.hpp  tcp_scheduler.hpp  tcp_server.hpp  udp_client.hpp  udp_peer.hpp  udp_server.hpp
include/coro/: async_thread_pool.hpp  attribute.hpp  condition_variable.hpp  coro.hpp  default_executor.hpp  event.hpp  expected.hpp  facade.hpp  fd.hpp  generator.hpp  invoke.hpp  io_notifier.hpp  io_scheduler.hpp  latch.hpp  mutex.hpp  platform.hpp  poll.hpp  queue.hpp  ring_buffer.hpp  scheduler.hpp  semaphore.hpp  shared_mutex.hpp  signal.hpp  sync_wait.hpp  task.hpp  task_container.hpp  task_group.hpp  thread_pool.hpp  thread_pool_ws.hpp  time.hpp  when_all.hpp  when_any.hpp
include/coro/concepts/: awaitable.hpp  buffer.hpp  executor.hpp  promise.hpp  range_of.hpp
include/coro/detail/: awaiter_list.hpp  io_notifier_epoll.hpp  io_notifier_iocp.hpp  io_notifier_kqueue.hpp  iocp_overlapped.hpp  lockfree_object_pool.hpp  lockfree_queue.hpp  pipe.hpp  platform.hpp  poll_info.hpp  riften_deque.hpp  signal_unix.hpp  signal_win32.hpp  task_self_deleting.hpp  task_self_destroying.hpp  timer_handle.hpp  tl_expected.hpp  win32_headers.hpp  winsock_handle.hpp
include/coro/net/: connect.hpp  dns_resolver.hpp  endpoint.hpp  hostname.hpp  io_status.hpp  ip_address.hpp  read_status.hpp  recv_status.hpp  send_status.hpp  socket.hpp  socket_address.hpp  tcp_client.hpp  tcp_server.hpp  udp_peer.hpp  write_status.hpp
include/coro/net/dns/: resolver.hpp
include/coro/net/tcp/: client.hpp  server.hpp
include/coro/net/tls/: client.hpp  connection_status.hpp  context.hpp  recv_status.hpp  send_status.hpp  server.hpp
include/coro/net/udp/: peer.hpp
include/coro/ranges/: await.hpp  drain.hpp  filter.hpp  join.hpp  socket_stream.hpp  take.hpp  take_until.hpp  to.hpp  transform.hpp  utils.hpp
src/: async_thread_pool.cpp  condition_variable.cpp  connect.cpp  default_executor.cpp  dns_client.cpp  event.cpp  facade.cpp  io_notifier.cpp  io_scheduler.cpp  libcoro.cppm  libcoro.h  mutex.cpp  poll.cpp  scheduler.cpp  semaphore.cpp  shared_mutex.cpp  sync_wait.cpp  task_container.cpp  tcp_client.cpp  tcp_scheduler.cpp  thread_pool.cpp  thread_pool_ws.cpp
src/coro/: async_manual_reset_event.hpp  coro.hpp  engine.cpp  engine.hpp  event.hpp  generator.hpp  scheduler.hpp  shared_mutex.hpp  sync_wait.hpp  task.hpp  task_completion_source.hpp  when_all.hpp
src/coro/concepts/: executor.hpp  range_of.hpp
src/coro/net/: dns_resolver.hpp  ip_address.hpp  ssl_context.hpp  ssl_handshake_status.hpp  tcp_client.hpp  udp_peer.hpp
src/detail/: io_notifier_epoll.cpp  io_notifier_iocp.cpp  io_notifier_kqueue.cpp  pipe.cpp  signal_unix.cpp  signal_win32.cpp  task_self_deleting.cpp  task_self_destroying.cpp  timer_handle.cpp  winsock_handle.cpp
src/net/: connect.cpp  dns_client.cpp  dns_resolver.cpp  io_status.cpp  ip_address.cpp  recv_status.cpp  send_status.cpp  socket.cpp  ssl_context.cpp  tcp_client.cpp  tcp_scheduler.cpp  tcp_server.cpp  udp_client.cpp  udp_peer.cpp  udp_server.cpp
src/net/dns/: resolver.cpp
src/net/tcp/: client.cpp  server.cpp
src/net/tls/: client.cpp  connection_status.cpp  context.cpp  recv_status.cpp  send_status.cpp  server.cpp
src/net/udp/: peer.cpp
test/: CMakeLists.txt  bench.cpp  catch_amalgamated.cpp  catch_amalgamated.hpp  catch_extensions.cpp  catch_extensions.hpp  main.cpp  test_async_manual_reset_event.cpp  test_condition_variable.cpp  test_dns_client.cpp  test_engine.cpp  test_event.cpp  test_generator.cpp  test_invoke.cpp  test_io_scheduler.cpp  test_latch.cpp  test_mutex.cpp  test_queue.cpp  test_ranges.cpp  test_ring_buffer.cpp  test_scheduler.cpp  test_semaphore.cpp  test_shared_mutex.cpp  test_sync_wait.cpp  test_task.cpp  test_task_container.cpp  test_task_group.cpp  test_tcp_scheduler.cpp  test_thread_pool.cpp  test_thread_pool_ws.cpp  test_when_all.cpp  test_when_any.cpp
test/android/: build.gradle  gradlew  gradlew.bat  settings.gradle
test/android/scripts/: build_openssl.sh
test/android/src/main/: AndroidManifest.xml
test/android/src/main/cpp/: CMakeLists.txt  main.cpp
test/android/src/main/java/com/example/libcorotest/: MainActivity.java
test/concepts/: test_concepts.cpp
test/detail/: test_pipe.cpp
test/net/: catch_net_extensions.hpp  test_dns_client.cpp  test_dns_resolver.cpp  test_endpoint.cpp  test_io_status.cpp  test_ip_address.cpp  test_tcp_scheduler.cpp  test_tcp_server.cpp  test_tls_server.cpp  test_udp_peers.cpp
